# xllm

./: .gitignore  CMakeLists.txt  atb_graph_building_mechanism.md  deepseek_v2_npu_call_chain.md  deepseek_v2_npu_runtime_execution.md  xllm_working_mechanism.md
docs/: model-architecture-and-registration.md  xllm-architecture-worker-guide.md  xllm-cli-options-guide.md
docs/ge_design/: 00_ge_ds4_code_implementation_summary.md  01_ge_ds4_design_overview.md  02_ge_ds4_code_framework.md  03_ge_ds4_implementation_plan.md  04_ge_ds4_key_decisions.md  05_prefill_vs_decode_operator_diff.md  06_mixed_mode_risk_analysis.md  07_ge_es_architecture_correction.md  08_ge_dual_graph_design.md  10_ge_weight_as_input_design.md  11_ge_update_summary.md  README.md  ge_adaptation_work_breakdown.md  ge_dual_graph_spec.md
docs/zh/design/: executor_design.md  ge_graph_debug_guide.md  ge_graph_executor_design.md  ge_graph_executor_final_design.md  onerec_callchain.md  onerec_model_architecture.md  rec_engine_pipeline_design.md  rec_engine_pipeline_instances_comparison.md  rec_engine_pipeline_step_detail.md  rec_worker_pipeline_forward_input_usage.md
xllm/: xllm.cpp
xllm/api_service/: rec_completion_service_impl.cpp
xllm/core/distributed_runtime/: dist_manager.cpp  master.cpp  rec_engine.cpp  rec_engine.h  rec_master.cpp  rec_master.h
xllm/core/framework/: hf_model_loader.cpp  model_loader.cpp
xllm/core/layers/npu_ge/: CMakeLists.txt
xllm/core/runtime/: CMakeLists.txt  acl_graph_executor_impl.cpp  executor.cpp  executor_impl_factory.cpp  forward_params.h  ge_graph_executor_impl.cpp  ge_graph_executor_impl.h  ge_session_manager.cpp  ge_session_manager.h  ge_tensor_converter.cpp  ge_tensor_converter.h  rec_worker_impl.cpp  rec_worker_impl.h
xllm/core/scheduler/: continuous_scheduler.h  fixed_steps_scheduler.cpp  fixed_steps_scheduler.h
xllm/core/util/: rec_model_utils.h  utils.h
xllm/models/llm/npu_ge/: CMakeLists.txt  deepseek_v4.cpp  deepseek_v4.h
(+15 files in other folders)
